gl31-master/src/test/deca/syntax/valid/sansobjet/primary_expr.deca
// Description:
//    tests de programme correct syntaxiquement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021
{
    boolean a,b;
    (a && b);
}
